Deleted the unnecessary option for Asgard