@@ -7,7 +7,6 @@ $docker_cmd run \
 --dns "$dns" \
 $dns_search \
 --name asgard -h asgard.asgard.local.flyacmeair.net \
--e CATALINA_OPTS=-XX:MaxPermSize=128m\ -DskipCacheFill=true \
 acmeair/asgard
 
 $docker_cmd inspect --format '{{ .Config.Hostname }} {{ .NetworkSettings.IPAddress }}' asgard
